--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,9 +1,9 @@
 
 
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-ILDL0KL\\MYSQL;Database=DB_Website;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=DB_Website;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
